--- a/Geter_seter_ES6/index.html
+++ b/Geter_seter_ES6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Su dung static tring ES6</title>
+    <title>Sử dụng Getter và Setter trong ES6</title>
     <script src="script.js"></script>
 </head>
 <body>
